syntax = "proto3";

package calculator;

option go_package = "grpc-go-course/calculator/proto";

message SumRequest {
  int64 number1 = 1;
  int64 number2 = 2;
}

message SumResponse {
  int64 result = 1;
}

message PrimeRequest {
  int64 value = 1;
}

message PrimeResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc PrimeDecomposition(PrimeRequest) returns (stream PrimeResponse);

}
